# rs-packages

./: Cargo.toml  README.md  file.txt  index.d.ts  index.js  index.node  package.json  test_fibbo.ts  ts-stream-read.ts  tsconfig.json
direct-io/: Cargo.toml  readme.md
direct-io/src/: lib.rs
js_binders/: Cargo.toml
js_binders/src/: lib.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: direct_io.rs  lib.rs  stream_interface.rs  utils.rs
src/utils/: events.rs  stream.rs
src/utils/events/: EventEmitter.rs
src/utils/stream/: stream_interface.rs
