[package]
edition = "2021"
name = "rust-typescript"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.4", default-features = false, features = ["napi4"] }
napi-derive = "2.9.3"
futures = "0.3.25"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
