[package]
edition = "2021"
name = "js-binders"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.4", default-features = true, features = ["napi8"] }
napi-derive = "2.9.3"
futures = "0.3.25"
syn = "1.0"
quote = "1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true